--- a/app.json
+++ b/app.json
@@ -39,7 +39,7 @@
     },
     "FORCE_SUB_MESSAGE": {
       "description": "Optional: Force Sub message of bot, use HTML parsemode format",
-      "value": "Hello {first}\n\n<b>You need to join in my Channel/Group to use me\n\nKindly Please join Channel</b>"
+      "value": "<b>Hello 👋 {first}💗</b>\n\n<b>You Need to Join Our Channel to Use me\n\nKindly Please Join Our Channel</b>"
     },
     "ADMINS": {
       "description": "A space separated list of user_ids of Admins, they can only create links",
@@ -72,3 +72,4 @@
     }
   }
 }
+
