--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "TG File Share/Sharing Bot",
+  "name": "HMTD File Store Bot",
   "description": "file sharing bot store posts and it can access by special links",
   "keywords": [
     "telegram",
